Fixed box spacing

--- a/client/src/styles/map.css
+++ b/client/src/styles/map.css
@@ -30,8 +30,8 @@
   /* background-image: url("https://img1.picmix.com/output/stamp/normal/9/0/2/5/1645209_33009.gif"); */
   background-repeat: no-repeat;
   background-size: cover;
-  width: 1200px; 
-  height: 750px;  
+  width: 66vw; 
+  height: 80vh;  
   border:4px solid black;
   border-radius: 14px; 
   overflow: hidden;
